fix popbox position

--- a/contact.html
+++ b/contact.html
@@ -88,8 +88,8 @@
 							</div>
 						</td>
 						<td>
-							<div class="blueBeat">
-								<a href="https://facebook.com" target="_blank"><div class="focusable"><img src="icons/email.png" /></div></a>
+							<div class="blueBeat" >
+								<a href="javascript:void(0);" onclick="openResponseHttp()"><div class="focusable"><img src="icons/email.png" /></div></a>
 							</div>
 						</td>
 					</tr>
