correction embeded javascripts/css non intitialized style beugs

--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,8 @@
 					<input type="submit" value="Submit">
 				  </form>
 				</div>
-				<div id="responseWrapper">				
-					<div id="responseContainer" onclick="requestSomething()">
+				<div id="responseWrapper" >				
+					<div id="responseContainer" onclick="requestSomething()" class="blueBeatFont" >
 						<p id="responseLine"><br>-- Click here to contact the Webmaster --<br><br></p>
 					</div>
 				</div>
@@ -84,7 +84,7 @@
 					  <tr>
 						<td>
 							<div class="redBeat">
-								<a href="javascript:void(0);" onclick="sendMail()"><div class="focusable"><img src="icons/mail_icon.png" /></div></a>
+								<a href="javascript:void(0);" onclick="openMailBox()"><div class="focusable"><img src="icons/mail_icon.png" /></div></a>
 							</div>
 						</td>
 						<td>
