--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
 			<h1> Welcome To WiJa's Story </h1>
 			<!-- <h3> The website is under construction ... </h3> -->
 			</div>
-			<div class="popBox hideable">
-				<strong>W</strong>ija's project is evolving thanks to you. Wija is welcoming your return on the App in the <em>'Follow Us'</em> section.<br><br>
-				<div class="heartBeat" style="width:100%; text-align:center;"><a href="contact.html" >Get into Wija's Story</a></div>
+			<div class="popBox hideable" id="wijaBox">
+				<p><strong>W</strong>ija's project is evolving thanks to you. Wija's team welcome your return on the App in <em>'Follow Us'</em> section.<br><br></p>
+				<div class="heartBeat" style="width:100%; text-align:center;">
+					<p><a href="contact.html" >Get into Wija's Story</a></p>
+				</div>
 			</div>
 			<div id="wijaSlidesWrapper">
 				<div id="storyW">
