remove style to requestreponse panel

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 				  </form>
 				</div>
 				<div id="responseWrapper" >				
-					<div id="responseContainer" onclick="requestSomething()" class="blueBeatFont" >
+					<div id="responseContainer" onclick="requestSomething()" >
 						<p id="responseLine"><br>-- Click here to contact the Webmaster --<br><br></p>
 					</div>
 				</div>
