script are clean of GUI beugs

--- a/index.html
+++ b/index.html
@@ -49,19 +49,30 @@
 			<h1> Welcome To WiJa's Story </h1>
 			<!-- <h3> The website is under construction ... </h3> -->
 			</div>
-			<div class="popBox hideable" id="wijaBox">
+			<div class="popBox hideable" id="wijaBox_W">
 				<p><strong>W</strong>ija's project is evolving thanks to you. Wija's team welcome your return on the App in <em>'Follow Us'</em> section.<br><br></p>
 				<div class="heartBeat" style="width:100%; text-align:center;">
 					<p><a href="contact.html" >Get into Wija's Story</a></p>
 				</div>
 			</div>
+			
+			<div class="popBox hideable" id="wijaBox_I">
+				<p><strong>I</strong>nteractive App... Wija's team welcome your return on the App in <em>'Follow Us'</em> section.<br><br></p>
+
+			</div>
+			
+			<div class="popBox hideable" id="wijaBox_J">
+				<p><strong>J</strong> ... Hum project is evolving thanks to you. Wija's team welcome your return on the App in <em>'Follow Us'</em> section.<br><br></p>
+
+			</div>
+			
+			<div class="popBox hideable" id="wijaBox_A">
+				<p><strong>A</strong> ... Hum project is evolving thanks to you. Wija's team welcome your return on the App in <em>'Follow Us'</em> section.<br><br></p>
+			</div>
+			
 			<div id="wijaSlidesWrapper">
-				<div id="storyW">
-					<h3>W</h3>
-					<p>ija begins ...</p>
-				</div>
 				<div class="slideBox spinableY">
-					<div class="front" onclick="openStoryW()">W</div>
+					<div class="front">W</div>
 					<div class="right">I</div>
 					<div class="back">J</div>
 					<div class="left">A</div>
