stable website with little more content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div id="topnav">
 					<div id="menuIconWrapper">
 						<a onclick="openMenu()" href="javascript:void(0);" id="menuIcon">
-						<i class="material-icons resizable" style="font-size:250%;background-color:white;color:grey;">menu</i>
+						<i class="material-icons resizable" style="font-size:250%;background-color:white;color:black;">menu</i>
 						</a>
 					</div>
 					<div id="topnavDropMenu" class="hideable">
@@ -50,28 +50,53 @@
 			<!-- <h3> The website is under construction ... </h3> -->
 			</div>
 			<div class="popBox hideable" id="wijaBox_W">
-				<p><strong>W</strong>ija's project is evolving thanks to you. Wija's team welcome your return on the App in <em>'Follow Us'</em> section.<br><br></p>
+				<p><strong>W</strong>ija's project is evolving ... <br> 
+				{
+				Wija's team would welcome your return on the App.<br>
+				We can interact through this plateform in <em>'Follow Us'</em> section. Just click and post your comment. 
+				Kindly.<br>
+				The Development Team.
+				}
+				</p>
 				<div class="heartBeat" style="width:100%; text-align:center;">
-					<p><a href="contact.html" >Get into Wija's Story</a></p>
+					<a href="contact.html" >Get into Wija's Story</a>
 				</div>
 			</div>
 			
 			<div class="popBox hideable" id="wijaBox_I">
-				<p><strong>I</strong>nteractive App... Wija's team welcome your return on the App in <em>'Follow Us'</em> section.<br><br></p>
+				<p><strong>I</strong>nnovative design <br>
+				{
+				WiJa is pushing forward new ideas regarding the design of UI for Apps and web content.
+				We are embedding static content like webpages, 
+				buttons, select menus in 3D interactive objects.<br>
+				Thus, the output UI is <em>compact</em>, <em>elegant</em> and <em>intuitive</em>. Please contact us to learn more about lastest developements.
+				}
+				</p>
 
 			</div>
 			
 			<div class="popBox hideable" id="wijaBox_J">
-				<p><strong>J</strong> ... Hum project is evolving thanks to you. Wija's team welcome your return on the App in <em>'Follow Us'</em> section.<br><br></p>
-
+				<p><strong>J</strong>ump into wiJa's Story: <br>
+				{
+				We are dreaming of a world free from static UI, static pages and click-buttons interactions. We are dreaming of slick, compact and higly responsive UI.<br>
+				Our kids won't use anymore +100 buttons UI, messy menus and overcrowded webpages. <br>
+				We are dreaming in ... <em>wiJa</em>.
+				}</p>
 			</div>
 			
 			<div class="popBox hideable" id="wijaBox_A">
-				<p><strong>A</strong> ... Hum project is evolving thanks to you. Wija's team welcome your return on the App in <em>'Follow Us'</em> section.<br><br></p>
+				<p><strong>A</strong>ds free <br>
+				{
+				Until the end, wiJa is commited to avoid any advertisement. We are concerned by wild scripts injecting +18 content into three year-old apps.<br>
+				We dislike this	economic model from deep of our hearts. In its one of main reason, we develop this project. We will rise funds if neacessary through
+				apointed campaigns, but we vow to never add wild ads and pop-ups in our material.
+				The Dev Team.
+				}
+				</p>
 			</div>
 			
 			<div id="wijaSlidesWrapper">
-				<div class="slideBox spinableY">
+				<div class="slideBox">
 					<div class="front">W</div>
 					<div class="right">I</div>
 					<div class="back">J</div>
