--- a/about.html
+++ b/about.html
@@ -54,13 +54,13 @@
 			<div id="content">
 			<h2 style="	border-bottom :1px gray solid;"> About Us </h2>
 			<div id="firstPost">
-				<p> The project wiJa has been initiated to improve learning skills of kids while having fun. As parents, we designed our Android App with perfect content for children.</p>
+				<p> The project wiJa is to improve learning skills of kids while they are having fun. We are regular parents and we design our Android App with perfect content for children.</p>
 				<h4> - ads free - </h4>
-				<p>First of all, our apps are free from advertisements and disturbing information for young kids. We are appalled by wild ads poping out in regular Android apps for kids. 
+				<p>First of all, our app is free from advertisements and disturbing information for young kids. We are appalled by wild ads poping out in regular Android apps for kids. 
 				The content of these ads cannot be supervised by the parents. And kids are at risk and not ready for that. We stepped up against that with this wiJa's project. </p>
 				<h4> - no jailing animations - </h4>
 				<p>Secondly, a sober design was prefered to help kids to navigate easily through the whole app. WiJa's apps are not saturated with attention drawing animations. 
-				Kids are free to get in and get out of wiJa thanks to the pure design. We don't want your kids to get poluted by wild animations running around. We keep your kid focus on scheduled
+				Kids are free to get in and get out of wiJa thanks to the pure design. We don't want your kids to get trapped by wild animations running around. We keep your kid focus on scheduled
 				task. When he has finished, he may leave anytime.</p>
 				<h4> - supervised content - </h4>
 				<p>Lastly, we are responsible for the content of the app and the educational material within. We will like your return to improve it.</p>
