fix home styles

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 			<!-- <h3> The website is under construction ... </h3> -->
 			</div>
 			<div class="popBox hideable" id="wijaBox_W">
-				<p><strong>W</strong>ija's project is evolving ... <br> 
+				<h5><strong>W</strong>ija's project is evolving ...</h5> 
+				<p>
 				{
 				Wija's team would welcome your return on the App.<br>
 				We can interact through this plateform in <em>'Follow Us'</em> section. Just click and post your comment. 
@@ -64,7 +65,8 @@
 			</div>
 			
 			<div class="popBox hideable" id="wijaBox_I">
-				<p><strong>I</strong>nnovative design <br>
+				<h5><strong>I</strong>nnovative design </h5>
+				<p>
 				{
 				WiJa is pushing forward new ideas regarding the design of UI for Apps and web content.
 				We are embedding static content like webpages, 
@@ -76,7 +78,8 @@
 			</div>
 			
 			<div class="popBox hideable" id="wijaBox_J">
-				<p><strong>J</strong>ump into wiJa's Story: <br>
+				<h5><strong>J</strong>ump into wiJa's Story: </h5>
+				<p>
 				{
 				We are dreaming of a world free from static UI, static pages and click-buttons interactions. We are dreaming of slick, compact and higly responsive UI.<br>
 				Our kids won't use anymore +100 buttons UI, messy menus and overcrowded webpages. <br>
@@ -85,7 +88,8 @@
 			</div>
 			
 			<div class="popBox hideable" id="wijaBox_A">
-				<p><strong>A</strong>ds free <br>
+				<h5><strong>A</strong>ds free </h5>
+				<p>
 				{
 				Until the end, wiJa is commited to avoid any advertisement. We are concerned by wild scripts injecting +18 content into three year-old apps.<br>
 				We dislike this	economic model from deep of our hearts. In its one of main reason, we develop this project. We will rise funds if neacessary through
