add full error page/fix style issues

--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 					  </tr>
 					  <tr>
 						<td>
-							<div class="redBeat">
+							<div class="redBeat" id="mailBoxButton">
 								<a href="javascript:void(0);" onclick="openMailBox()"><div class="focusable"><img src="icons/mail_icon.png" /></div></a>
 							</div>
 						</td>
