--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
 			<h1> Welcome To WiJa's Story </h1>
 			<!-- <h3> The website is under construction ... </h3> -->
 			</div>
-			<div class="popBox hideable" id="wijaBox_W">
+			<div class="popBox hideable" id="wijaBox_W" onclick="popBoxClicked()">
 				<h5><strong>W</strong>ija's project is evolving ...</h5> 
 				<p>
 				{
 				Wija's team would welcome your return on the App.<br>
-				We can interact through this plateform in <em>'Follow Us'</em> section. Just click and post your comment. 
+				We can interact through this plateform in the <em>'Connect'</em> section. Just click and post your comment.<br>
 				Kindly.<br>
 				The Development Team.
 				}
 				</p>
-				<div class="heartBeat" style="width:100%; text-align:center;">
-					<a href="contact.html" >Get into Wija's Story</a>
+				<div class="heartBeat" style="width:100%; text-align:center;margin-top:1.2em;">
+					<a href="contact.html" onclick="dopopBoxWClicked()">Get into Wija's Story</a>
 				</div>
 			</div>
 			
-			<div class="popBox hideable" id="wijaBox_I">
+			<div class="popBox hideable" id="wijaBox_I" onclick="popBoxClicked()">
 				<h5><strong>I</strong>nnovative design </h5>
 				<p>
 				{
@@ -77,23 +77,23 @@
 
 			</div>
 			
-			<div class="popBox hideable" id="wijaBox_J">
+			<div class="popBox hideable" id="wijaBox_J" onclick="popBoxClicked()">
 				<h5><strong>J</strong>ump into wiJa's Story: </h5>
 				<p>
 				{
 				We are dreaming of a world free from static UI, static pages and click-buttons interactions. We are dreaming of slick, compact and higly responsive UI.<br>
-				Our kids won't use anymore +100 buttons UI, messy menus and overcrowded webpages. <br>
+				We expect in the future, kids won't use anymore +100 buttons UI, messy menus and overcrowded webpages. <br>
 				We are dreaming in ... <em>wiJa</em>.
 				}</p>
 			</div>
 			
-			<div class="popBox hideable" id="wijaBox_A">
+			<div class="popBox hideable" id="wijaBox_A" onclick="popBoxClicked()">
 				<h5><strong>A</strong>ds free </h5>
 				<p>
 				{
-				Until the end, wiJa is commited to avoid any advertisement. We are concerned by wild scripts injecting +18 content into three year-old apps.<br>
-				We dislike this	economic model from deep of our hearts. In its one of main reason, we develop this project. We will rise funds if neacessary through
-				apointed campaigns, but we vow to never add wild ads and pop-ups in our material.
+				Till the end, wiJa is commited to avoid any advertisement. We are concerned by wild scripts injecting +18 content into three year-old apps.<br>
+				We dislike this	economic model from deep of our hearts. It is one of main reason, we develop this project. We will rise funds if neacessary through
+				apointed campaigns. But, we vow to never add wild ads and pop-ups in our material.<br>
 				The Dev Team.
 				}
 				</p>
@@ -108,8 +108,6 @@
 					<div class="top">&nbsp</div>
 					<div class="bottom">&nbsp</div>
 				</div>
-				<!-- <a class="prev" onclick="plusSlides(-1)">&#10094;</a> -->
-				<!-- <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
 
 			</div>
 			
