fix screen resize on mobile

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 				<h5><strong>W</strong>ija's project is evolving ...</h5> 
 				<p>
 				{
-				Wija's team would welcome your return on the App.<br>
-				We can interact through this plateform in the <em>'Connect'</em> section. Just click and post your comment.<br>
+				Wija's app is in beta version. The dev team would welcome your return on the App.
+				We can interact through this plateform into the <em>'Connect'</em> section. Just click and post your comment with passion.<br>
+				You are amazing.<br>
 				Kindly.<br>
 				The Development Team.
 				}
@@ -71,10 +72,12 @@
 				WiJa is pushing forward new ideas regarding the design of UI for Apps and web content.
 				We are embedding static content like webpages, 
 				buttons, select menus in 3D interactive objects.<br>
-				Thus, the output UI is <em>compact</em>, <em>elegant</em> and <em>intuitive</em>. Please contact us to learn more about lastest developements.
+				Thus, the output UI is <em>compact</em>, <em>elegant</em> and <em>intuitive</em>. Please follow us to learn more about lastest developements.
 				}
 				</p>
-
+				<div style="width:100%; text-align:center;margin:0 auto;">
+				<button class="social_media_button" onclick="socialMediaClicked()"><i class="material-icons">group_add</i></button>
+				</div>
 			</div>
 			
 			<div class="popBox hideable" id="wijaBox_J" onclick="popBoxClicked()">
@@ -85,6 +88,9 @@
 				We expect in the future, kids won't use anymore +100 buttons UI, messy menus and overcrowded webpages. <br>
 				We are dreaming in ... <em>wiJa</em>.
 				}</p>
+				<div class="heartBeat" style="width:100%; text-align:center;margin-top:1.2em;">
+					<a href="contact.html" onclick="dopopBoxWClicked()">Get involved in Wija</a>
+				</div>
 			</div>
 			
 			<div class="popBox hideable" id="wijaBox_A" onclick="popBoxClicked()">
@@ -92,7 +98,7 @@
 				<p>
 				{
 				Till the end, wiJa is commited to avoid any advertisement. We are concerned by wild scripts injecting +18 content into three year-old apps.<br>
-				We dislike this	economic model from deep of our hearts. It is one of main reason, we develop this project. We will rise funds if neacessary through
+				We dislike that	economic model from deep of our hearts. It is one of main reason, we develop this project. We will rise funds if necessary through
 				apointed campaigns. But, we vow to never add wild ads and pop-ups in our material.<br>
 				The Dev Team.
 				}
