fix mailbox style

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 					<input type="text" id="lname" name="e-mail" placeholder="Your e-mail please..">
 					<label for="country">Comment</label>
 					<textarea> </textarea>				  
-					<input type="submit" value="Submit">
+					<input type="submit" value="Submit" onclick="submitComment(this)">
 				  </form>
 				</div>
 				<div id="responseWrapper" >				
