--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<script src="js/requestSomething.js"></script>
 		<link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
+		<link href="css/style-mobile.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="css/style-wijaslides.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<title>wiJa's Story</title>
@@ -43,6 +44,23 @@
 					<div id="androidBadge" class="resizable">
 						<a href="https://play.google.com/store" target="_blank"><img src="icons/google-play-badge.png" /></a>
 					</div>	
+					<div id="topnavDropMenuMobile">
+						<div id="dropMenu-content-Mobile">
+						<ul id="dropMenuListMobile">
+						<li><a onclick="openMenuMobile()" href="javascript:void(0);" id="menuIconMobile">
+							<i class="material-icons resizable" style="font-size:250%;background-color:white;color:black;">menu</i>
+						</a></li>
+						<li><a href="index.html"  onclick="closeMenu()" onmouseover="turnGrey(this)" onmouseout="turnWhite(this)">
+							<i class="material-icons menuButtonMobile resizable" style="font-size:225%">home</i></a></li>			
+						<li><a href="https://play.google.com/store" onmouseover="turnGrey(this)" onmouseout="turnWhite(this)" target="_blank" onclick="closeMenu()">
+							<i class="material-icons menuButtonMobile resizable"style="font-size:225%">android</i></a></li>
+						<li><a href="contact.html" onclick="closeMenu()" onmouseover="turnGrey(this)" onmouseout="turnWhite(this)">
+							<i class="material-icons menuButtonMobile resizable" style="font-size:225%">group_add</i></a></li>
+						<li><a href="about.html" onclick="closeMenu()" onmouseover="turnGrey(this)" onmouseout="turnWhite(this)">
+							<i class="material-icons menuButtonMobile resizable" style="font-size:225%">business</i></a></li>
+						</ul>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div id="content">
