--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
 					<div id="topnavDropMenuMobile">
 						<div id="dropMenu-content-Mobile">
 						<ul id="dropMenuListMobile">
-						<li><a onclick="openMenuMobile()" href="javascript:void(0);" id="menuIconMobile">
-							<i class="material-icons resizable" style="font-size:250%;background-color:white;color:black;">menu</i>
+						<li><a onclick="openMenu()" href="javascript:void(0);" id="menuIconMobile">
+							<i class="material-icons menuButtonMobile" style="font-size:250%;color:black;">menu</i>
 						</a></li>
-						<li><a href="index.html"  onclick="closeMenu()" onmouseover="turnGrey(this)" onmouseout="turnWhite(this)">
-							<i class="material-icons menuButtonMobile resizable" style="font-size:225%">home</i></a></li>			
-						<li><a href="https://play.google.com/store" onmouseover="turnGrey(this)" onmouseout="turnWhite(this)" target="_blank" onclick="closeMenu()">
-							<i class="material-icons menuButtonMobile resizable"style="font-size:225%">android</i></a></li>
-						<li><a href="contact.html" onclick="closeMenu()" onmouseover="turnGrey(this)" onmouseout="turnWhite(this)">
-							<i class="material-icons menuButtonMobile resizable" style="font-size:225%">group_add</i></a></li>
-						<li><a href="about.html" onclick="closeMenu()" onmouseover="turnGrey(this)" onmouseout="turnWhite(this)">
-							<i class="material-icons menuButtonMobile resizable" style="font-size:225%">business</i></a></li>
+						<li><a href="index.html"  onclick="closeMenu()">
+							<i class="material-icons" style="font-size:225%;color:grey;opacity:0.5;">home</i></a></li>			
+						<li><a href="https://play.google.com/store" target="_blank" onclick="closeMenu()">
+							<i class="material-icons"style="font-size:225%;color:grey;opacity:0.5;">android</i></a></li>
+						<li><a href="contact.html" onclick="closeMenu()" >
+							<i class="material-icons" style="font-size:225%;color:grey;opacity:0.5;">group_add</i></a></li>
+						<li><a href="about.html" onclick="closeMenu()" >
+							<i class="material-icons" style="font-size:225%;color:grey;opacity:0.5;">business</i></a></li>
 						</ul>
 						</div>
 					</div>
