add first animations on openMenu

--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
 					<div id="topnavDropMenuMobile">
 						<div id="dropMenu-content-Mobile">
 						<ul id="dropMenuListMobile">
-						<li><a onclick="openMenu()" href="javascript:void(0);" id="menuIconMobile">
-							<i class="material-icons menuButtonMobile" style="font-size:250%;color:black;">menu</i>
+						<li><a onclick="openMenuMobile()" href="javascript:void(0);" id="menuIconMobile">
+							<i class="material-icons animatedButton" style="font-size:250%;color:black;">menu</i>
 						</a></li>
 						<li><a href="index.html"  onclick="closeMenu()">
-							<i class="material-icons" style="font-size:225%;color:grey;opacity:0.5;">home</i></a></li>			
+							<i class="material-icons menuButtonMobile" style="font-size:225%;color:black;opacity:0.3;">home</i></a></li>			
 						<li><a href="https://play.google.com/store" target="_blank" onclick="closeMenu()">
-							<i class="material-icons"style="font-size:225%;color:grey;opacity:0.5;">android</i></a></li>
+							<i class="material-icons menuButtonMobile"style="font-size:225%;color:black;opacity:0.3;">android</i></a></li>
 						<li><a href="contact.html" onclick="closeMenu()" >
-							<i class="material-icons" style="font-size:225%;color:grey;opacity:0.5;">group_add</i></a></li>
+							<i class="material-icons menuButtonMobile" style="font-size:225%;color:black;opacity:0.3;">group_add</i></a></li>
 						<li><a href="about.html" onclick="closeMenu()" >
-							<i class="material-icons" style="font-size:225%;color:grey;opacity:0.5;">business</i></a></li>
+							<i class="material-icons menuButtonMobile" style="font-size:225%;color:black;opacity:0.3;">business</i></a></li>
 						</ul>
 						</div>
 					</div>
