fix mobile menu behavior

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 							<i class="material-icons animatedButton" style="font-size:250%;color:black;">menu</i>
 						</a></li>
 						<li><a href="index.html"  onclick="closeMenu()">
-							<i class="material-icons menuButtonMobile" style="font-size:225%;color:black;opacity:0.3;">home</i></a></li>			
+							<i class="material-icons menuButtonMobile disabledButton" style="font-size:225%;color:black;">home</i></a></li>			
 						<li><a href="https://play.google.com/store" target="_blank" onclick="closeMenu()">
-							<i class="material-icons menuButtonMobile"style="font-size:225%;color:black;opacity:0.3;">android</i></a></li>
+							<i class="material-icons menuButtonMobile disabledButton"style="font-size:225%;color:black;">android</i></a></li>
 						<li><a href="contact.html" onclick="closeMenu()" >
-							<i class="material-icons menuButtonMobile" style="font-size:225%;color:black;opacity:0.3;">group_add</i></a></li>
+							<i class="material-icons menuButtonMobile disabledButton" style="font-size:225%;color:black;">group_add</i></a></li>
 						<li><a href="about.html" onclick="closeMenu()" >
-							<i class="material-icons menuButtonMobile" style="font-size:225%;color:black;opacity:0.3;">business</i></a></li>
+							<i class="material-icons menuButtonMobile disabledButton" style="font-size:225%;color:black;">business</i></a></li>
 						</ul>
 						</div>
 					</div>
