--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 				WiJa is pushing forward new ideas regarding the design of UI for Apps and web content.
 				We are embedding static content like webpages, 
 				buttons, select menus in 3D interactive objects.<br>
-				Thus, the output UI is <em>compact</em>, <em>elegant</em> and <em>intuitive</em>. Please follow us to learn more about lastest developements.
+				Thus, the output UI is <em>compact</em>, <em>elegant</em> and <em>intuitive</em>. 
+				Please follow us to learn more about lastest developements.
 				}
 				</p>
 				<div style="width:100%; text-align:center;margin:0 auto;">
@@ -107,7 +108,7 @@
 				We are dreaming in ... <em>wiJa</em>.
 				}</p>
 				<div class="heartBeat" style="width:100%; text-align:center;margin-top:1.2em;">
-					<a href="contact.html" onclick="dopopBoxWClicked()">Get involved in Wija</a>
+					<a href="contact.html" onclick="dopopBoxWClicked()">Get involved into Wija</a>
 				</div>
 			</div>
 			
