fix onload behavior

--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
 		<link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="css/style-mobile.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<title>wiJa/About us</title>
+		<title>About wiJa</title>
 	</head>
 	
-	<body>
+	<body onload="onloadAction()">
 		<div id="wrapper">
 			<div id="overlay" class="hideable"></div>
 			<div id="wijaInfo">
