--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,10 @@
 		<link href="css/style-mailbox.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="css/style-responseHttp.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<title>wiJa/Follow us</title>
+		<title>Follow wiJa</title>
 	</head>
 	
-	<body>
+	<body onload="onloadAction()">
 		<div id="wrapper">
 			<div id="overlay" class="hideable"></div>
 			<div id="wijaInfo">
