fix contact css

--- a/contact.html
+++ b/contact.html
@@ -113,6 +113,18 @@
 							</div>
 						</td>
 					</tr>
+					<tr>
+						<td>
+							<div class="blueBeat" >
+								<a href="javascript:void(0);"><div class="focusable"><img src="icons/work.png" /></div></a>
+							</div>
+						</td>
+						<td>
+							<div class="redBeat" >
+								<a href="javascript:void(0);"><div class="focusable"><img src="icons/work.png" /></div></a>
+							</div>
+						</td>
+					</tr>
 				</table>
 
 			</div>
