--- a/contact.html
+++ b/contact.html
@@ -69,15 +69,15 @@
 				<h2 style="	border-bottom :1px gray solid;"> Connect With Us </h2>
 
 				<div id="mailBox" class="hideable">
-				  <form>
+				  <form id="formMailBox">
 					<label for="fname">First Name</label>
 					<input type="text" id="fname" name="firstname" placeholder="Your name..">
 					<label for="lname">Last Name</label>
 					<input type="text" id="lname" name="lastname" placeholder="Your last name..">
 					<label for="lname">E-mail</label>
-					<input type="text" id="lname" name="e-mail" placeholder="Your e-mail please..">
-					<label for="country">Comment</label>
-					<textarea> </textarea>				  
+					<input type="text" id="email" name="e-mail" placeholder="Your e-mail please..">
+					<label for="ltext">Comment</label>
+					<textarea  name="comment"> </textarea>				  
 					<input type="button" onclick="submitComment(this)" value="submit">
 				  </form>
 				</div>
