add a nice isable btn function

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 					<input type="text" id="email" name="e-mail" placeholder="Your e-mail please..">
 					<label for="ltext">Comment</label>
 					<textarea  name="comment"> </textarea>				  
-					<input type="button" onclick="submitComment(this)" value="submit">
+					<input type="button" id="submitButton" name="submitButton" onclick="submitComment(this)" value="submit">
 				  </form>
 				</div>
 
