fix buggy styles

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 				<p>
 				{
 				Wija's app is in beta version. The dev team would welcome your return on the App.
-				We can interact through this plateform into the <em>'Connect'</em> section. Just click and post your comment with passion.<br>
+				We can interact through this plateform into the <em>'Connect'</em> section.<br> 
+				Just click on the mailbox in that section and post your comment with passion.<br>
 				You are amazing.<br>
 				Kindly.<br>
 				The Development Team.
