fix resize behavior

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 		<title>About wiJa</title>
 	</head>
 	
-	<body onload="onloadAction()">
+	<body onload="onloadAction()" onresize="onResizeAction()">
 		<div id="wrapper">
 			<div id="overlay" class="hideable"></div>
 			<div id="wijaInfo">
