--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 		<title>Follow wiJa</title>
 	</head>
 	
-	<body onload="onloadAction()">
+	<body onload="onloadAction()" onresize="onResizeAction()">
 		<div id="wrapper">
 			<div id="overlay" class="hideable"></div>
 			<div id="wijaInfo">
