--- a/contact.html
+++ b/contact.html
@@ -77,8 +77,8 @@
 					<label for="lname">E-mail</label>
 					<input type="text" id="email" name="e-mail" placeholder="Your e-mail please..">
 					<label for="ltext">Comment</label>
-					<textarea  name="comment"> </textarea>				  
-					<input type="button" id="submitButton" name="submitButton" onclick="submitComment(this)" value="submit">
+					<textarea  name="comment" placeholder="add your comment here..."> </textarea>				  
+					<input class="enabledBtn" type="button" id="submitButton" name="submitButton" onclick="submitComment()" value="submit">
 				  </form>
 				</div>
 
