fix translation issues popbox

--- a/contact.html
+++ b/contact.html
@@ -91,36 +91,36 @@
 				<table id="tableContact" class="hideable" onsubmit="" action="php/post_comment.php">
 					<tr>
 						<td>
-							<div class="blueBeat">
+							<div class="mailBoxItem">
 								<a href="https://facebook.com" target="_blank"><div class="focusable"><img src="icons/facebook.png" /></div></a>
 							</div>
 						</td>
 						<td>
-							<div class="redBeat">
-								<a href="https://twitter.com" target="_blank"><div class="focusable"><img src="icons/twitter_bird.png" /></div></a>
+							<div class="mailBoxItem" id="mailBoxButton">
+								<a href="javascript:void(0);" onclick="openMailBox()"><div class="focusable"><img src="icons/mail_icon.png" /></div></a>
 							</div>
 						</td>
 					  </tr>
 					  <tr>
-						<td>
-							<div class="redBeat" id="mailBoxButton">
-								<a href="javascript:void(0);" onclick="openMailBox()"><div class="focusable"><img src="icons/mail_icon.png" /></div></a>
+					  	<td>
+							<div class="mailBoxItem">
+								<a href="https://twitter.com" target="_blank"><div class="focusable"><img src="icons/twitter_bird.png" /></div></a>
 							</div>
 						</td>
 						<td>
-							<div class="blueBeat" >
+							<div class="mailBoxItem" >
 								<a href="javascript:void(0);" onclick="openResponseHttp()"><div class="focusable"><img src="icons/email.png" /></div></a>
 							</div>
 						</td>
 					</tr>
 					<tr>
 						<td>
-							<div class="blueBeat" >
+							<div class="mailBoxItem" >
 								<a href="javascript:void(0);"><div class="focusable"><img src="icons/work.png" /></div></a>
 							</div>
 						</td>
 						<td>
-							<div class="redBeat" >
+							<div class="mailBoxItem" >
 								<a href="javascript:void(0);"><div class="focusable"><img src="icons/work.png" /></div></a>
 							</div>
 						</td>
