text in about section

--- a/about.html
+++ b/about.html
@@ -65,12 +65,22 @@
 			<div id="content">
 			<h2 style="	border-bottom :1px gray solid;"> About Us </h2>
 			<div id="firstPost">
-				<p> The project wiJa is to improve learning skills of kids while they are having fun. We are regular parents and we design our Android App with perfect content for children.</p>
+				<div class="textBox">
+				<h5> - wiJa's design - </h5>
+				<p> The project wiJa is to improve learning skills of kids while they are having fun. We are regular parents and we design our Android App with perfect content for children.
+				wiJa App is designed as a simplified Android Phone GUI. WiJa deploys a safe environnement where kids can focus on one single task at a time. 
+				<!--<br><a> learn more >></a>-->
+				<br>The App's UI channels the child into one activity with one main task and nothing else to do. This learning method is tested, proven and widely used in schools. 
+				The progress of your child is assessed according to the accomplissement of main task. 
+				Other apps are multitasking in order to trap your kids in the GUI. 
+				Thus, their educational performance cannot be assessed precisely.</p>
+				</div>
 				<div class="textBox">
 				<h5> - ads free - <span><img src="icons/noAds.bmp"/></span></h5> 
 				<p>First of all, our app is free from advertisements and disturbing information for young kids. We are appalled by wild ads poping out in regular Android apps for kids. 
-				The content of these ads cannot be supervised by the parents. And kids are at risk and not ready for that. We stepped up against that with this wiJa's project. </p>
-				<a> learn more >></a>
+				The content of these ads cannot be supervised by the parents. And kids are at risk and not ready for that. We stepped up against that with this wiJa's project. 
+				<br><a> learn more >></a></p>
+				
 				
 				</div>
 				<div class="textBox">
