--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 		<link href="css/style-responseHttp.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<title>Follow wiJa</title>
+		<meta charset="UTF-8">
 	</head>
 	
 	<body onload="onloadAction()" onresize="onResizeAction()">
