fix style and add text

--- a/about.html
+++ b/about.html
@@ -72,11 +72,10 @@
 				<h5> - wiJa's design - </h5>
 				<p id="textBox001"> The project wiJa is to improve learning skills of kids while they are having fun. We are regular parents and we design our Android App with perfect content for children.
 				wiJa App is designed as a simplified Android Phone GUI. WiJa deploys a safe environnement where kids can focus on one single task at a time. 
-				<!--<br><a> learn more >></a>-->
-				<br>The App's UI channels the child into one activity with one main task and nothing else to do. This learning method is tested, proven and widely used in schools. 
-				The progress of your child is assessed according to the accomplissement of main task.
 				<br><span><a id="textBox001_more" onclick="appendText('textBox001')"> learn more >></a></span></p>
 				<p id="textBox001_next" style="display:none">
+				The App's UI channels the child into one activity with one main task and nothing else to do. This learning method is tested, proven and widely used in schools. 
+				The progress of your child is assessed according to the accomplissement of main task.
 				Other apps are multitasking in order to trap your kids in the GUI. 
 				Thus, their educational performance cannot be assessed precisely.
 				<br><span><a id="textBox001_less" onclick="hideText('textBox001')"> less <<</a></span></p>
