--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div id="content">
 			<h1> Welcome To WiJa's Story </h1>
 			<div class="popBox hideable" id="wijaBox_W" onclick="popBoxClicked()">
-				<h5><strong>W</strong>ija's project is evolving ...</h5> 
+				<h5><strong>W</strong>ija is evolving ...</h5> 
 				<p>
 				{
 				Wija's app is in beta version. The dev team would welcome your return on the App.
