--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 					<div id="topnavDropMenuMobile">
 						<div id="dropMenu-content-Mobile">
 						<ul id="dropMenuListMobile">
-						<li><a onclick="openMenuMobile()" href="javascript:void(0);" id="menuIconMobile">
+						<li><a onclick="openMenuMobile()" onmousedown="openMenuMobile()" href="javascript:void(0);" id="menuIconMobile">
 							<i class="material-icons animatedButton" style="font-size:250%;color:red;">power_settings_new</i>
 						</a></li>
-						<li><a href="index.html"  onclick="openMenuMobile()">
+						<li><a href="index.html" >
 							<i class="material-icons menuButtonMobile disabledButton" style="font-size:225%;color:black;">home</i></a></li>			
-						<li><a href="contact.html" onclick="openMenuMobile()" >
+						<li><a href="contact.html" >
 							<i class="material-icons menuButtonMobile disabledButton" style="font-size:225%;color:black;">group_add</i></a></li>
-						<li><a href="about.html" onclick="openMenuMobile()" >
+						<li><a href="about.html"  >
 							<i class="material-icons menuButtonMobile disabledButton" style="font-size:225%;color:black;">business</i></a></li>
 						<li><a href="https://play.google.com/store" target="_blank" onclick="openMenuMobile()">
 							<i class="material-icons menuButtonMobile disabledButton"style="font-size:225%;color:black;">android</i></a></li>
