fix styles but IE is bugged

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 					<div id="topnavDropMenuMobile">
 						<div id="dropMenu-content-Mobile">
 						<ul id="dropMenuListMobile">
-						<li><a onclick="openMenuMobile()" onmousedown="openMenuMobile()" href="javascript:void(0);" id="menuIconMobile">
+						<li><a onclick="openMenuMobile()" href="javascript:void(0);" id="menuIconMobile">
 							<i class="material-icons animatedButton" style="font-size:250%;color:red;">power_settings_new</i>
 						</a></li>
 						<li><a href="index.html" >
@@ -69,7 +69,7 @@
 			<h2 style="	border-bottom :1px gray solid;"> About Us </h2>
 			<div id="firstPost">
 				<div class="textBox">
-				<h5> - wiJa's design - </h5>
+				<h5> - wiJa's design - <span><img src="icons/androidBot.bmp"/></span></h5>
 				<p id="textBox001"> The project wiJa is to improve learning skills of kids while they are having fun. We are regular parents and we design our Android App with perfect content for children.
 				wiJa App is designed as a simplified Android Phone GUI. WiJa deploys a safe environnement where kids can focus on one single task at a time. 
 				<br><span><a id="textBox001_more" onclick="appendText('textBox001')"> learn more >></a></span></p>
