--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<div id="topnavDropMenuMobile">
 						<div id="dropMenu-content-Mobile">
 						<ul id="dropMenuListMobile">
-						<li><a onclick="openMenuMobile()" onmousedown="openMenuMobile()" href="javascript:void(0);" id="menuIconMobile">
+						<li><a onclick="openMenuMobile()"  href="javascript:void(0);" id="menuIconMobile">
 							<i class="material-icons animatedButton" style="font-size:250%;color:red;">power_settings_new</i>
 						</a></li>
 						<li><a href="index.html" >
