fix main style issues for mobile version

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 						<p id="responseLine"><br>-- Click here to contact the Webmaster --<br><br></p>
 					</div>
 				</div>
-
+				<div id="tableContactWrapper">
 				<table id="tableContact" class="hideable" onsubmit="" action="php/post_comment.php">
 					<tr>
 						<td>
@@ -127,6 +127,8 @@
 						</td>
 					</tr>
 				</table>
+				</div>
+				<!-- <script src="js/buildFunnyTable.js"></script> -->
 				<div class="notificationBox">
 					<p>coucou!</p>
 				</div>
@@ -140,5 +142,5 @@
 	</body>
 	
 	<script src="js/fixStyle.js"></script>
-
+	
 </html>
